[package]
name = "simple-hyper-server-tls"
authors = ["Mateusz Szpakowski"]
license = "LGPL-2.1-or-later"
version = "0.1.1"
edition = "2018"
description = "Simplify initialization TLS for Hyper server"
repository = "https://github.com/matszpk/simple-hyper-server-tls"
documentation = "https://docs.rs/simple-hyper-server-tls"
categories = ["network-programming"]
keywords = ["web", "server", "openssl", "hyper", "tls"]

[dependencies]
tls-listener = { version = "0.5", optional = true }
tokio-rustls = { version = "0.23", optional = true }
rustls = { version = "0.20", optional = true }
rustls-pemfile = { version = "1.0", optional = true }
openssl = { version = "0.10", optional = true }
hyper = { version = "0.14", features = ["server", "runtime", "tcp", "stream"] }

[features]
default = ["hyper-full-server"]
tls-rustls = ["tls-listener/rustls", "tokio-rustls", "rustls", "rustls-pemfile"]
tls-openssl = ["tls-listener/openssl", "openssl"]
hyper-h1 = [ "hyper/http1", "tls-listener/hyper-h1" ]
hyper-h2 = [ "hyper/http2", "tls-listener/hyper-h2" ]
hyper-full-server = [ "hyper-h1", "hyper-h2" ]

[[example]]
name = "hello"
path = "examples/hello.rs"

[[example]]
name = "hello_data"
path = "examples/hello_data.rs"

[dev-dependencies]
tokio = { version = "1.18", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.11", features = ["native-tls", "native-tls-alpn"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
